--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,3 +13,45 @@ button {
 .calc h1 {
     margin-bottom: 0px;
 }
+* {
+    box-sizing: border-box; 
+}
+.wrapper {
+    width: 400px;
+    margin: 40px auto 0 auto;
+    border: 1px solid rgba(0,0,0, .2);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.form-signin{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+
+}
+.wrapper__checkbox{
+    width: 100%;
+    text-align: left;
+    margin-top: 10px;
+}
+.form-control{
+    width: 300px;
+    height: 35px;
+}
+#checkbox{
+    width: 16px;
+}
+.wrapper button {
+    text-align: center;
+    margin-top: 10px;
+    width: 300px;
+    height: 40px;
+    background-color: rgb(0, 110, 255);
+    border-radius: 5px;
+}
+
