--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,57 +1,34 @@
-input{
-    height: 30px;
-}
+
 button {
-    width: 100px;
-    height: 100px;
-    background: class;
+  width: 100px;
+  height: 40px;
+  margin-right: 50px;
 }
-.calc{
-    text-align: center;
-    margin-left: 20px;
+.list {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
 }
-.calc h1 {
-    margin-bottom: 0px;
+.list-item {
+  display: block;
+  border-radius: 4px;
+  width: 150px;
+  height: 50px;
+  transition: 1s;
+  border: 1px solid navy;
+  font-size: 20px;
 }
-* {
-    box-sizing: border-box; 
+.active {
+  width: 200px;
+  height: 80px;
 }
 .wrapper {
-    width: 400px;
-    margin: 40px auto 0 auto;
-    border: 1px solid rgba(0,0,0, .2);
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
 }
-.form-signin{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-
+img {
+  height: 300px;
 }
-.wrapper__checkbox{
-    width: 100%;
-    text-align: left;
-    margin-top: 10px;
-}
-.form-control{
-    width: 300px;
-    height: 35px;
-}
-#checkbox{
-    width: 16px;
-}
-.wrapper button {
-    text-align: center;
-    margin-top: 10px;
-    width: 300px;
-    height: 40px;
-    background-color: rgb(0, 110, 255);
-    border-radius: 5px;
-}
-
